学习天地-自由发挥-项目管理 实现CRUD基本功能

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,13 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- 学习天地-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-study</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -196,6 +203,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-study</module>
     </modules>
     <packaging>pom</packaging>
 
